--- a/app/src/main/res/layout/activity_pay_record_add.xml
+++ b/app/src/main/res/layout/activity_pay_record_add.xml
@@ -26,111 +26,125 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp" />
 
-            <Spinner
-                android:id="@+id/spPerson"
+            <!-- スクロールビュー -->
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:spinnerMode="dropdown" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/memberListError"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="16dp"
-                android:textColor="@android:color/holo_red_dark"/>
-
-            <Spinner
-                android:id="@+id/spPayList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:spinnerMode="dropdown"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp" />
-            <TextView
-                android:id="@+id/PayListError"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="16dp"
-                android:textColor="@android:color/holo_red_dark"/>
-
-            <!-- TextInputLayout (入力フォーム) -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/payAmount"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:padding="3dp"
-                app:counterEnabled="true"
-                app:errorEnabled="true">
-
-                <EditText
-                    android:id="@+id/payAmountEditText"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_pay_amount"
-                    android:maxLength="6"
-                    android:inputType="number" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/payDate"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:padding="3dp"
-                app:counterEnabled="true"
-                app:errorEnabled="true">
+                    <Spinner
+                        android:id="@+id/spPerson"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:spinnerMode="dropdown" />
 
-                <EditText
-                    android:id="@+id/payDateEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_pay_date"
-                    android:focusable="false" />
+                    <TextView
+                        android:id="@+id/memberListError"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="16dp"
+                        android:textColor="@android:color/holo_red_dark"/>
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <Spinner
+                        android:id="@+id/spPayList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:spinnerMode="dropdown"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp" />
+                    <TextView
+                        android:id="@+id/PayListError"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="16dp"
+                        android:textColor="@android:color/holo_red_dark"/>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:id="@+id/PayDone"
-                android:text="@string/check_pay_done"/>
+                    <!-- TextInputLayout (入力フォーム) -->
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/payAmount"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="3dp"
+                        app:counterEnabled="true"
+                        app:errorEnabled="true">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/payNote"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:padding="3dp"
-                app:counterEnabled="true"
-                app:errorEnabled="true">
+                        <EditText
+                            android:id="@+id/payAmountEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/hint_pay_amount"
+                            android:maxLength="6"
+                            android:inputType="number" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/payNoteEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_pay_note" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/payDate"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="3dp"
+                        app:counterEnabled="true"
+                        app:errorEnabled="true">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                        <EditText
+                            android:id="@+id/payDateEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/hint_pay_date"
+                            android:focusable="false" />
 
-            <Button
-                android:id="@+id/buttonPayRecordAdd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/button_add" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:id="@+id/PayDone"
+                        android:text="@string/check_pay_done"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/payNote"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="3dp"
+                        app:counterEnabled="true"
+                        app:errorEnabled="true">
+
+                        <EditText
+                            android:id="@+id/payNoteEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/hint_pay_note" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/buttonPayRecordAdd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="@string/button_add" />
+
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
 
