絞り込みに領収済みのチェックを入れた

--- a/app/src/main/res/layout/activity_pay_record_add.xml
+++ b/app/src/main/res/layout/activity_pay_record_add.xml
@@ -115,7 +115,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:id="@+id/PayDone"
+                        android:id="@+id/payDone"
                         android:text="@string/check_pay_done"/>
 
                     <com.google.android.material.textfield.TextInputLayout
