ライセンスの一覧表示とアカウント削除処理の修正

--- a/app/src/main/res/layout/activity_user_update.xml
+++ b/app/src/main/res/layout/activity_user_update.xml
@@ -71,7 +71,7 @@
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_register" />
+                android:text="@string/button_update_user" />
 
         </LinearLayout>
 
