--- a/app/src/main/res/layout/activity_pay_record_list.xml
+++ b/app/src/main/res/layout/activity_pay_record_list.xml
@@ -26,14 +26,28 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp" />
 
-            <Button
-                android:id="@+id/buttonRefinement"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="10dp"
-                android:text="@string/button_refinement"
-                tools:ignore="RtlHardcoded" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/textViewTotalAmount"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="10dp"
+                    tools:ignore="RtlHardcoded"/>
+
+                <Button
+                    android:id="@+id/buttonRefinement"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/button_refinement" />
+            </LinearLayout>
 
             <!-- FloatingActionButton -->
             <ScrollView
