--- a/app/src/main/res/layout/fragment_pay_record_list_refinement.xml
+++ b/app/src/main/res/layout/fragment_pay_record_list_refinement.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:hint="Start Date"
+        android:hint="@string/hint_start_date"
         android:inputType="date" />
 
     <EditText
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:hint="Finish Date"
+        android:hint="@string/hint_finish_date"
         android:inputType="date" />
 
     <Spinner
