--- a/app/src/main/res/layout/activity_pay_purpose_update.xml
+++ b/app/src/main/res/layout/activity_pay_purpose_update.xml
@@ -36,7 +36,7 @@
                 app:errorEnabled="true"
                 android:layout_margin="16dp">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/payPurposeNameEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
