--- a/app/src/main/res/layout/activity_user_update.xml
+++ b/app/src/main/res/layout/activity_user_update.xml
@@ -35,7 +35,7 @@
                 app:counterEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/emailEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 app:counterEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/passwordEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
