--- a/app/src/main/res/layout/activity_balance_detail.xml
+++ b/app/src/main/res/layout/activity_balance_detail.xml
@@ -96,11 +96,31 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/leftover"
+                        android:text="@string/book_balance"
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/leftoverTextView"
+                        android:id="@+id/bookBalanceTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/actual_balance_colon"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/actualBalanceTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
@@ -109,16 +129,16 @@
 
                 <Button
                     android:id="@+id/buttonBalanceSheetUpdate"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="家計簿の更新"/>
+                    android:text="@string/button_update_balance"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:text="【目的別支払合計】"
+                    android:text="@string/total_payment_by_purpose"
                     android:textSize="18sp"/>
 
                 <ScrollView
