--- a/app/src/main/res/layout/activity_balance_update.xml
+++ b/app/src/main/res/layout/activity_balance_update.xml
@@ -35,11 +35,12 @@
                 app:counterEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/budgetEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_budget"
+                    android:maxLength="7"
                     android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -55,7 +56,7 @@
                 app:counterEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/startDateEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -74,12 +75,32 @@
                 app:counterEnabled="true"
                 app:errorEnabled="true">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/finishDateEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_finish_date"
                     android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/actualBalanceError"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="3dp"
+                app:counterEnabled="true"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/actualBalanceEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_actual_balance"
+                    android:maxLength="7"
+                    android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
