--- a/app/src/main/res/layout/fragment_pay_record_list_refinement.xml
+++ b/app/src/main/res/layout/fragment_pay_record_list_refinement.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"/>
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/startDateEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         android:hint="@string/hint_start_date"
         android:inputType="date" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/finishDateEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
