--- a/app/src/main/res/layout/activity_home_detail.xml
+++ b/app/src/main/res/layout/activity_home_detail.xml
@@ -14,12 +14,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:elevation="10dp" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:buttonGravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="?attr/colorPrimary"
+        android:elevation="10dp" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
