--- a/app/src/main/res/layout/activity_user_add.xml
+++ b/app/src/main/res/layout/activity_user_add.xml
@@ -9,10 +9,12 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        app:buttonGravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="100dp"
         android:background="?attr/colorPrimary"
         android:elevation="10dp" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email"
